<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:background="#618D2D"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/newChallengeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="114dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="114dp"
            android:layout_marginBottom="442dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="20sp" app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintVertical_bias="0.0"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <Button
                android:text="@string/Min30Challenge"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/challenge2"
                android:textColor="@color/textColor"
                android:background="@drawable/button_bg"
                app:layout_constraintStart_toStartOf="@+id/challenge4"
                app:layout_constraintBottom_toBottomOf="@+id/challenge1"/>
        <Button
                android:text="@string/Hours2Challenge"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/challenge4"
                android:textColor="@color/textColor"
                android:background="@drawable/button_bg"
                android:layout_marginBottom="88dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>
        <Button
                android:text="@string/Hour1Challenge"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:textColor="@color/textColor"
                android:background="@drawable/button_bg"
                android:id="@+id/challenge3"
                android:layout_marginBottom="88dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"/>
        <Button
                android:text="@string/Min15Challenge"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:textColor="@color/textColor"
                android:background="@drawable/button_bg"
                android:id="@+id/challenge1"
                app:layout_constraintStart_toStartOf="@+id/challenge3" android:layout_marginBottom="14dp"
                app:layout_constraintBottom_toTopOf="@+id/challenge3"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>