<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="4dp"
              android:layout_marginStart="8dp"
              android:layout_marginBottom="4dp"
              android:layout_marginEnd="8dp">

    <TextView
            android:text="@string/filterByGallery"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/usage_stats_display_order_types"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TextView
                android:text="@string/app_name_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/last_time_used_label"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/usage_time_label"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </LinearLayout>


    <ListView android:id="@+id/pkg_list"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp"
              android:drawSelectorOnTop="false"/>
</LinearLayout>