<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/backgroundColor"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="4dp">

    <TextView
            android:text="@string/display_order_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@color/backgroundColor"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@color/lightGreen"
                android:layout_weight="1"
                android:src="@drawable/ic_sort_black_24dp"/>

        <Spinner
                android:id="@+id/typeSpinner"
                android:layout_weight="13"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:background="@color/lightGreen"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:entries="@array/usage_stats_display_order_types" />


    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <TextView
                android:text="@string/app_name_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_height="wrap_content" />

        <TextView
                android:text="@string/usage_time_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


    </LinearLayout>



    <ListView android:id="@+id/pkg_list"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:drawSelectorOnTop="false" />
</LinearLayout>